solc_ossfuzz_seed_corpus/test_sol/test_4072a365ac039b71d81ccc355ebcb1054195cfd762ace7632d1adff1b42e457d_21d5c1144fe38ba1a181d1e6c0818e20adaab68e_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
function f0(function (int24, address payable) external   returns (function (string memory, function () internal  [2] memory) external  [1] memory, bytes27) i0)    
{
  (function (string memory, function () internal  [2] memory) external  [1] memory l0, bytes27 l1) = i0(int24(0),payable(address(0x0000000000000000000000000000000000000007)));
}
library L0 {
  event ev0(bool  ep0, int200  ep1) anonymous;
  error er0();
  function f1() public    returns(bool o0)
  {
  }
  function f2(uint144 i0) private    returns(bytes10 o0)
  {
  }
}
using L0 for uint;

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
library L1 {
  function f3() internal    returns(address payable o0,bool o1)
  {
  }
  function f4(function (bytes1, uint48) external   returns (bool, address[1] memory, bytes20) i0) external   
  {
  }
  event ev1();
}
contract C0 {
  address immutable  s0 = address(this);
  address   s1;
  uint248  public s2;
  bool   s3 = false;
  constructor(address i0,uint248 i1)   {
    s1 = address(this);
    s2 *= (uint248(0) ** uint24((uint24(15009619) & uint24((uint24(0) / uint24(10981515))))));
    unchecked {
      (bool l0, bytes memory l1) = address(this).call(bytes("106cfa9d1cd3689fb47ade9c370592905927dd5d914297040000000000000000000000000000000000000000"));
    }
  }
  function f5() private    returns(bytes32 o0,address payable o1)
  {
    (bool l0, bytes memory l1) = address(this).call(bytes("fb5e7d603d386ceb71add3247c82c67fb8991233700535720fece235b97a9778a53ecfd7c8bccfaeb7dfed73210b4bfbefdd1fb0754f8e"));
    (bool l2, bytes memory l3) = address(this).call(abi.encodePacked(address(address(this)), payable(address(payable(address(this)))), bool(true), bool((true || true))));
    (bool l4, bytes memory l5) = address(this).call(bytes("ffffffffffffffffffffffffffffffffffffffffffffffffffffff0000000000000000000000000000000000000000"));
  }
  using L1 for *;
  using L1 for *;
  using L1 for *;
}
using L1 for uint;
using L1 for uint;
using L1 for uint;
// ----
// TypeError 2582: (su0.sol:117-149): Internal type cannot be used for external function type.
